Fix border on large displays not covering screen.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -54,7 +54,6 @@
 .scrollpage {
   display: flex;
   flex-direction: column;
-  height: 100vh;
   align-items: center;
 }
 
